# betfAIr-trading-tool

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_decisions.py  003_model_versions_inferences.py  004_orders_fills.py
config/: team_mappings.yaml  trading.yaml
docs/architecture/: 00-overview.md  01-requirements-nfrs.md  02-c4-context.md  03-c4-container.md  04-c4-component.md  05-sequence-diagrams.md  06-data-model.md  07-risk-controls.md  08-observability.md  09-failure-modes-runbook.md  10-mvp-roadmap.md  adr-0001-scope-prematch-only.md  adr-0002-signal-supervised-elo-form.md  adr-0003-bet-settlement-vs-hedge.md
docs/product/: backtesting-protocol.md  data-sources.md  experiment-plan-ablation.md  kpis-and-metrics.md  prd.md  security-privacy.md
docs/superpowers/plans/: 2026-05-07-integration-tests.md  2026-05-08-a1-a2-feature-wiring.md  2026-05-10-decision-engine.md  2026-05-11-model-inference.md  2026-05-13-execution-engine.md
docs/superpowers/specs/: 2026-05-07-integration-tests-design.md  2026-05-08-a1-a2-feature-wiring-design.md  2026-05-10-decision-engine-design.md  2026-05-11-model-inference-design.md  2026-05-13-execution-engine-design.md
paper/: paper.md
src/betfair_trading/: main.py  settings.py
tests/: conftest.py
tests/integration/: conftest.py  test_decision_writer.py  test_execution_engine.py  test_inference_writers.py  test_model_inference_provider.py  test_order_writers.py  test_pg_smoke.py  test_pipeline_a1_a2.py  test_pipeline_collector.py  test_pipeline_decision.py  test_pipeline_edge_cases.py  test_pipeline_execution.py  test_pipeline_external_data.py  test_pipeline_feature_builder.py  test_reconciler.py  test_train_cli.py
tests/unit/: test_dataset_builder.py  test_decision_model.py  test_edge.py  test_elo_engine.py  test_entity_matcher.py  test_external_ingestor.py  test_feature_builder.py  test_form_features.py  test_gates.py  test_inference_model.py  test_order_model.py  test_probability_providers.py  test_pydantic_models.py  test_sizer.py  test_training_features.py
(+36 files in other folders)
