[project]
name = "betfair-trading"
version = "0.1.0"
description = "Pre-match AI-assisted trading system for Betfair Exchange"
requires-python = ">=3.12"
dependencies = [
    "betfairlightweight>=2.20.1",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0",
    "aiohttp>=3.11.0",
    "alembic>=1.14.0",
    "scikit-learn>=1.5.0",
    "numpy>=2.0.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "testcontainers[postgres]>=4.8.0",
    "psycopg2-binary>=2.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/betfair_trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["src", "."]
markers = [
    "integration: requires Postgres testcontainer (Docker daemon needed)",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
